--- a/semana01/index.html
+++ b/semana01/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fabrizio</title>
+    <title>Página de Fabrizio</title>
 </head>
 <body>
-    <h1>¡Hola Mundo!</h1>
+    
+Perfume
+
+Gabrielle Essence Eau De Parfum
+
+A floral, solar and voluptuous interpretation composed by Olivier Polge,
+Perfumer-Creator for the House of CHANEL.
+
+$149.99
+$169.99
+
+Add to Cart
+
 </body>
 </html>
